--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,4 +1,5 @@
 <% include ./partials/header.ejs %>
+
   <div class="w-full min-h-screen bg-zinc-900 text-white py-5">
       <div class="nav flex justify-between items-center px-4">
         <h3 class="text-lg"><%= user.username%></h3>
@@ -13,15 +14,15 @@
         </div>
         <div class="stats flex gap-5 items-center justify-between">
           <div class="flex flex-col items-center justify-center">
-            <h3>2000</h3>
+            <h3><%= user.posts.length %> </h3>
             <h4>Posts</h4>
           </div>
           <div class="flex flex-col items-center justify-center">
-            <h3>1021</h3>
+            <h3>34</h3>
             <h4>Followers</h4>
           </div>
           <div class="flex flex-col items-center justify-center">
-            <h3>251</h3>
+            <h3>25</h3>
             <h4>Following</h4>
           </div>
         </div>
@@ -30,9 +31,11 @@
         <h3 class="text-lg mb-1"><%= user.name%></h3>
         <p class="text-xs tracking-tight opacity-50"><%= user.bio%></p>
       </div>
+      <% if (edit){%>
       <div class="px-6 mt-5">
         <a class="px-3 py-2 bg-zinc-800 text-xs rounded-md" href="/edit">Edit Profile</a>
       </div>
+      <% } %>
       <br><hr>
       <div class="posts w-full flex gap-1 py-2 mt-5 flex-wrap">
         <% user.posts.forEach(function(post){ %>
