--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -1,10 +1,11 @@
 <% include ./partials/header.ejs %>
   <div class="w-full min-h-screen bg-zinc-900 text-white py-5">
     <div class="w-full px-4 flex items-center justify-between">
-      <img class="w-1/4" src="/images/logo.png" alt="">
+      <img class="w-1/3" src="/images/logo-2.png" alt="">
       <div class="icons -mt-2 flex gap-5 items-center">
-        <i class="text-[1.4rem] ri-heart-3-line"></i>
-        <i class="text-[1.4rem] ri-messenger-line"></i>
+        <a href="/coming-soon"><i class="text-[1.4rem] ri-heart-3-line"></i></a>
+        <a href="/coming-soon"><i class="text-[1.4rem] ri-messenger-line"></i></a>
+        
       </div>
     </div>
     <div class="story px-3 flex gap-3 overflow-auto mt-5">
@@ -74,11 +75,11 @@
         <div class="post mt-10 w-full min-h-[50vh]">
           <div class="title px-4 flex items-center gap-2">
             <div class="w-[8vw] h-[8vw] bg-sky-100 rounded-full overflow-hidden">
-              <img class="w-full h-full  object-cover" src="/images/uploads/<%= elem.user.profileImage %>" alt="">
+              <a href="/profile/<%= elem.user.username%>"><img class="w-full h-full  object-cover" src="/images/uploads/<%= elem.user.profileImage %>" alt=""></a>
             </div>
-            <h4 class="text-sm"><%= elem.user.username%></h4>
+            <a href="/profile/<%= elem.user.username%>"><h4 class="text-sm"><%= elem.user.username%></h4></a>
             <h6 class="text-xs opacity-30">1d</h6>
-            <img src="" alt="">
+            <i class="text-[1.4rem] ri-more-2-line ml-48"></i>
           </div>
           <div class="w-full h-96 mt-4 bg-sky-100 overflow-hidden">
             <img class="w-full h-full object-cover" src="/images/uploads/<%= elem.picture %> " alt="">
