--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,7 @@
 <% include ./partials/header.ejs %>
   <div class="w-full min-h-screen bg-zinc-900 text-white py-5 flex flex-col items-center justify-center">
     <div class="flex flex-col items-center gap-5 px-4">
-      <img class="w-1/2" src="/images/logo.png" alt="">
+      <img class="w-1/2" src="/images/logo-2.png" alt="">
       <form class="w-full" action="/login" method="post">
         <input class="px-3 mt-2 py-2 border-2 border-zinc-800 rounded-md block w-full bg-zinc-900" type="text" placeholder="username" name="username">
         <input class="px-3 mt-2 py-2 border-2 border-zinc-800 rounded-md block w-full bg-zinc-900" type="password" placeholder="password" name="password">
